--- a/exercicio_III.html
+++ b/exercicio_III.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia da semana</title>
+    <title>Positivo, negativo ou zero</title>
 </head>
 <body>
     
-<script src="exercicio_II.js"></script>    
+<script src="exercicio_III.js"></script>    
 </body>
 </html>
