--- a/exercicio_VI.html
+++ b/exercicio_VI.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IMC</title>
+    <title>Calculadora</title>
 </head>
 <body>
     
-<script src="exercicio_V.js"></script>    
+<script src="exercicio_VI.js"></script>    
 </body>
 </html>
